--- a/reactNativeDvaElements/package.json
+++ b/reactNativeDvaElements/package.json
@@ -8,8 +8,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "dva": "^2.1.0",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-navigation": "^1.0.0-beta.26",
+    "react-redux": "^5.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
